# http-api/src/main/scala/com/matthewjones372/http/api/SWAPIServerError.scala
@@ -5,7 +5,8 @@ import zio.schema.*
 abstract class SWAPIServerError(message: String) extends RuntimeException(message)
 
 object SWAPIServerError:
-  final case class PersonNotFound(message: String, personId: Int) extends SWAPIServerError(message) derives Schema
-  final case class FilmNotFound(message: String, filmId: Int)     extends SWAPIServerError(message) derives Schema
-  final case class UnexpectedError(message: String)               extends SWAPIServerError(message) derives Schema
-  final case class ServerError()                                  extends SWAPIServerError("Internal server error") derives Schema
+  final case class CharacterNotFound(message: String, characterId: Int) extends SWAPIServerError(message) derives Schema
+  final case class FilmNotFound(message: String, filmId: Int)           extends SWAPIServerError(message) derives Schema
+  final case class PathNotFound(message: String)                        extends SWAPIServerError(message) derives Schema
+  final case class UnexpectedError(message: String)                     extends SWAPIServerError(message) derives Schema
+  final case class ServerError()                                        extends SWAPIServerError("Internal server error") derives Schema
