# http-api/src/main/scala/com/matthewjones372/http/api/ShortestPath.scala
@@ -1,0 +1,7 @@
+package com.matthewjones372.http.api
+
+import zio.schema.*
+
+final case class PathStep(person: String, film: String) derives Schema
+
+final case class ShortestPath(start: String, end: String, films: Int, steps: List[PathStep]) derives Schema
